; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/persistent-data/extr_dm-space-map-common.c_metadata_ll_save_ie.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/persistent-data/extr_dm-space-map-common.c_metadata_ll_save_ie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ll_disk = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.disk_index_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ll_disk*, i64, %struct.disk_index_entry*)* @metadata_ll_save_ie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @metadata_ll_save_ie(%struct.ll_disk* %0, i64 %1, %struct.disk_index_entry* %2) #0 {
  %4 = alloca %struct.ll_disk*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.disk_index_entry*, align 8
  store %struct.ll_disk* %0, %struct.ll_disk** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.disk_index_entry* %2, %struct.disk_index_entry** %6, align 8
  %7 = load %struct.ll_disk*, %struct.ll_disk** %4, align 8
  %8 = getelementptr inbounds %struct.ll_disk, %struct.ll_disk* %7, i32 0, i32 0
  store i32 1, i32* %8, align 8
  %9 = load %struct.ll_disk*, %struct.ll_disk** %4, align 8
  %10 = getelementptr inbounds %struct.ll_disk, %struct.ll_disk* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %5, align 8
  %14 = add nsw i64 %12, %13
  %15 = load %struct.disk_index_entry*, %struct.disk_index_entry** %6, align 8
  %16 = call i32 @memcpy(i64 %14, %struct.disk_index_entry* %15, i32 4)
  ret i32 0
}

declare dso_local i32 @memcpy(i64, %struct.disk_index_entry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
